
Version 6.8.4 - 2023-09-06
--------------------------
* Bug fixes (see mercurial logs for details)


Version 6.8.3 - 2023-07-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Enforce record rules when reading only non SQL fields (#12428)

Version 6.8.2 - 2023-06-21
--------------------------
* Bug fixes (see mercurial logs for details)


Version 6.8.1 - 2023-05-17
--------------------------
* Bug fixes (see mercurial logs for details)


Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Support return instances for Function getter and on_change_with
* Log events for ModelStorage
* Use IDENTITY column for id columns in the postgresql backend
* Use no breaking space to format number and date
* Fallback to code to format currency without symbol
* Add sort method to order like ModelStorage.search
* Do not alter argument values of with_transaction decorator (#12108)
* Support SMALLINT and REAL as backend types
* Remove BigInteger field
* Remove support for Python 3.7
* Add support for Python 3.11
* Add scroll time for calendar view
* Allow cache size to be configured
* Add local and global list of ignore context keys
* Add functions in transaction for check access and active record
* Add check_access and active_records attribute to Transaction
* Add searchable and sortable methods on Field
* Add support for barcode and QR code
* Support reading string value of selection fields
* Add ButtonActionException and RPCReturnException
* Rename ModelStorage.count into ModelStorage.estimated_count
* Add border type to images
* Lock table on transaction start
* Use EXISTS for search on O2M with many records
* Replace target_search by use of count()
* Manage domain on id in single value list as unique
* Do not validate domain for empty fields
* Warn about implicit save() of unsaved relation
* Raise error message with record name and field in check_xml_record
* Cache RPC call for class method selection
