@@ -1,3 +1,4 @@
+* Support database cache as template for tests
 
 Version 6.8.4 - 2023-09-06
 --------------------------
